--- a/Twitter4j.properties
+++ b/Twitter4j.properties
@@ -1,6 +1,6 @@
 debug=true
-oauth.consumerKey=
-oauth.consumerSecret=
-oauth.accessToken=
-oauth.accessTokenSecret=
+oauth.consumerKey=nTxbBpT5dfCUaGSfj7Wqh4YwS
+oauth.consumerSecret=BwFsG8JR8SJXF2jXqQ9RqStNzvSjUEKrLPmt6YhqAPYtNK7g5H
+oauth.accessToken=1120706087483662336-XC3gdcfbvwzZaLt73BZJtQFC31f5fu
+oauth.accessTokenSecret=6rtrK73DWtNQLRXWIuRKl1kl6XVOqHHVkJ1cmxQCAVCfO
 Dtwitter4j.loggerFactory=twitter4j.NullLoggerFactory
